# python-upload2sharepoint

./: HEIC.L - Daily Share Price.xlsx  HEIT.L - Daily Share Price.xlsx  generate_xl.py  project.py  pyproject.toml
